--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
+  <!-- Favicon -->
+
+  <link rel="icon" href="favicon.ico">
+
 </head>
 <body>
 
